--- a/app/src/main/res/drawable/date_shape.xml
+++ b/app/src/main/res/drawable/date_shape.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <solid android:color="@color/active_color" />
-    <corners android:bottomLeftRadius="@dimen/_8sdp" />
+    <corners android:bottomLeftRadius="10dp"/>
 
 </shape>
