--- a/app/src/main/res/drawable/ic_user_profile.xml
+++ b/app/src/main/res/drawable/ic_user_profile.xml
@@ -7,14 +7,14 @@
         android:fillColor="#00000000"
         android:pathData="M11.372,4.5A4,4 0,1 1,7.372 0.5,4 4,0 0,1 11.372,4.5Z"
         android:strokeWidth="1"
-        android:strokeColor="#545ff3"
+        android:strokeColor="#FFFFFF"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
     <path
         android:fillColor="#00000000"
         android:pathData="M14.244,16.5c0,-3.1 -3.08,-5.6 -6.872,-5.6S0.5,13.4 0.5,16.5"
         android:strokeWidth="1"
-        android:strokeColor="#545ff3"
+        android:strokeColor="#FFFFFF"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
