--- a/app/src/main/res/layout/item_home_festival.xml
+++ b/app/src/main/res/layout/item_home_festival.xml
@@ -19,8 +19,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="@dimen/_80sdp"
+            android:layout_width="@dimen/_95sdp"
+            android:layout_height="@dimen/_95sdp"
             android:layout_margin="@dimen/_4sdp"
             app:cardCornerRadius="@dimen/_5sdp"
             app:cardElevation="@dimen/_2sdp"
@@ -45,22 +45,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/txt_fest_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/date_shape"
-                    android:maxLines="1"
-                    android:paddingHorizontal="@dimen/_4sdp"
-                    android:paddingVertical="@dimen/_2sdp"
-                    android:text="@{festivalData.date}"
-                    android:textColor="@color/al_white"
-                    android:textSize="@dimen/_8sdp"
-
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-
-                    tools:text="24, Jun 2022" />
 
 
 
@@ -80,6 +64,19 @@
             android:textColor="@color/black"
             app:fonts='@{"bold"}'
             app:layout_constraintTop_toBottomOf="@+id/cardView"
+            app:textSize='@{"font_body_xxs_size"}' />
+        <TextView
+            android:id="@+id/txt_fest_date"
+            android:layout_width="@dimen/_90sdp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:layout_marginTop="5dp"
+            android:text="@{festivalData.name}"
+            android:textColor="@color/active_color"
+            app:fonts='@{"bold"}'
+            app:layout_constraintTop_toBottomOf="@+id/txt_fest_name"
             app:textSize='@{"font_body_xxs_size"}' />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
