--- a/app/src/main/res/layout/political_frame_1.xml
+++ b/app/src/main/res/layout/political_frame_1.xml
@@ -28,7 +28,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_foreground"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -52,6 +52,7 @@
                     android:id="@+id/tvDesignation1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+
                     android:layout_gravity="center_horizontal"
                     android:text="Designation1"
                     android:textSize="@dimen/_7sdp" />
@@ -68,6 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+
                     android:text="Mobile Number"
                     android:textSize="@dimen/_7sdp" />
 
@@ -76,10 +78,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_8sdp"
                     android:layout_gravity="bottom"
+                    android:visibility="gone"
                     android:layout_marginTop="3dp"
                     android:elevation="1dp"
-                    android:src="@drawable/ic_all_social"
-                    android:visibility="visible" />
+                    android:src="@drawable/ic_all_social"/>
             </LinearLayout>
 
             <ImageView
@@ -90,7 +92,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher_foreground"
-                android:visibility="visible" />
+                android:visibility="gone" />
         </LinearLayout>
 
     </FrameLayout>
@@ -110,7 +112,7 @@
             android:layout_marginLeft="@dimen/_5sdp"
             android:layout_marginBottom="@dimen/_5sdp"
             android:orientation="horizontal"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
